2003-10-07  Per Bothner  <per@bothner.com>

	* AbstractSequence.java (equals):  If either operand is non-List
	or non-Sequence, just compare using identity.

2003-10-02  Per Bothner  <per@bothner.com>

	* Sequence.java:  Move class EofClass to separate file.
	* Makefile.am:  Update accordingly.
	* EofClass.java:  Make class public.
	(eofValue):  New public field.
	* Sequence.java (eofValue):  Make same as EofClass.eofValue.

2003-09-30  Per Bothner  <per@bothner.com>

	* TreeList.java (INT_FOLLOWS):  Make public - used by CallContext.

	* TreeList.java (getPosNextInt):  New method.

2003-09-24  Per Bothner  <per@bothner.com>

	* TreeList.java (copyToList):  Revert use of gnu.xml.NodeTree.

2003-09-23  Per Bothner  <per@bothner.com>

	* LList.java (makeList):  Generalize parameter to java.util.List,
	but only if JAVA2.
	* FVector.java (<init>)(Sequence)):  Likewise.

2003-09-14  Per Bothner  <per@bothner.com>

	* AbstractSequence.java (nextMatching):  New method.
	* TreeList.java (newMatching):  New method, based on nextMatchingChild.
	(nextMatchingChild):  Remove.

2003-09-09  Per Bothner  <per@bothner.com>

	* AbstractSequence.java (nextIndex):  Use getIndexDifference.
	* TreeList.java (getIndexDifference):  New method.

2003-09-04  Per Bothner  <per@bothner.com>

	* TreeList.java (dump):  Print attribute type as well as name.

2003-08-02  Per Bothner  <per@bothner.com>

	* AbstractSequence.java (firstAttributePos):  New method.
	* TreeList.java (firstAttributePos):  New method.

	* AttributePredicate.java (isInstance):  Remove xpos parameter.

	* TreeList.java (createPos):  Just call createRelativePos.
	(createRelativePos):  Fix some corner cases.

	* TreeList.java (posToDataIndex):  Fix some corner cases.

	* TreeList.java (copyToList):  New method.
	This is a kludge, since it creates a gnu.xml.NodeTree.
	(getPosNext):  Use use copyToList when copying to new TreeList.

	* TreeList.java (compare):  Simplify and fix using posToDataIndex.
